<!--
  ~ Copyright 2020. Huawei Technologies Co., Ltd. All rights reserved.
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<resources>
    <string name="app_name" translatable="false">ExoVideoReference</string>
    <string name="image">image</string>
    <string name="app_name_well">Exoplayer vs HMS Video Kit Reference App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="send">Send</string>
    <string name="login">Login</string>
    <string name="nav_home">Home</string>
    <string name="nav_record">Record</string>
    <string name="nav_profile">Profile</string>
    <string name="arrow">Arrow</string>
    <string name="replay_10s">Replay 10s</string>
    <string name="play_video">Play</string>
    <string name="forward_10s">Forward 10s</string>
    <string name="enter_url_address_for_a_video">Enter Url for a Video</string>
    <string name="record_video">Record Video</string>
    <string name="videos">Videos</string>

    <string name="welcome">Welcome <bi>%1$s</bi></string>
    <string name="rotate_camera">Rotate Camera</string>
    <string name="play_pause_button">Play Pause Button</string>
    <string name="send_url">Send Url</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="hide">Hide from Main</string>
    <string name="moving_to_unshare">Hiding video from Main</string>
    <string name="moving_to_share">Showing video in Main</string>
    <string name="enter_yt_url_address_for_a_video">Enter Youtube Url for Video</string>
    <string name="error_url">Please enter a valid Url!</string>
    <string name="error_url_yt">Please enter a valid Youtube Url!</string>
    <string name="lovely">Lovely</string>
    <string name="info">Info</string>
    <string name="message">Message</string>
    <string name="video_information">Video Information</string>
    <string name="video_service_provider">Video Service Provider</string>
    <string name="video_url">Video Url</string>
    <string name="video_sender">Video Sender</string>
    <string name="video_sender_id">Video Sender ID</string>
    <string name="video_width_height">Video Width - Height</string>
    <string name="video_play_mode">Video Play Mode</string>
    <string name="video_bitrate" translatable="false">Video BitRate</string>
    <string name="video_total_comments">Video Total Comments</string>
    <string name="video_given_lovelies">Video Given Lovelies</string>
    <string name="exit">Exit</string>

    <string name="video_settings"><bi>%1$s</bi> - Settings</string>
    <string name="hms_video" translatable="false">HMS Video Kit</string>
    <string name="gms_video" translatable="false">GMS Exo Player 2.0</string>

    <string name="app_version">App version - <bi>%1$s</bi></string>

    <string name="video_width_height_params" translatable="false"><bi>%1$s</bi> - <bi>%2$s</bi></string>
    <string name="two_dots" translatable="false">:</string>
    <string name="lovely_counter">Lovely <bi>%1$s</bi></string>
    <string name="comment">Comment</string>
    <string name="name">name</string>
    <string name="timestamp">Timestamp</string>
    <string name="dummyText" translatable="false">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto autem consectetur, cum eligendi eos error incidunt iusto molestias quam voluptatibus. Labore porro veritatis vitae. Iure nihil nisi, nostrum reiciendis saepe tenetur. Amet atque doloremque ex in laboriosam molestiae perferendis praesentium, ullam! Adipisci eius enim, excepturi impedit inventore qui repellendus soluta?</string>
    <string name="reply">Reply</string>
    <string name="zero" translatable="false">0</string>
    <string name="view_replies">View Replies</string>
    <string name="me">Me</string>
    <string name="type_a_message">Type a message</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="preview">Preview</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="vr" translatable="false">Vr</string>
    <string name="close">Close</string>
    <string name="accept">Accept</string>
    <string name="enter_video_name">Enter Video Name</string>
    <string name="thread">Thread</string>
    <string name="settings">Settings</string>
    <string name="language_turkish">Language: Turkish</string>
    <string name="language_english">Language: English</string>
    <string name="verification_code">Verification Code</string>
    <string name="more">More</string>
    <string name="pick_url">Pick Url</string>
    <string name="recorded_videos_will_appear_here">Recorded videos will appear here. Scroll for more when they do!</string>
</resources>