<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020. Huawei Technologies Co., Ltd. All rights reserved.
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_post_lovely"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/single_bottom_text"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="0dp"
        android:background="@color/transparent"
        android:visibility="gone"
        android:elevation="11dp"
        app:lottie_autoPlay="false"
        app:lottie_rawRes="@raw/downwards_lovely_lottie" />

    <LinearLayout
        android:id="@+id/single_bottom_text_sender_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/single_bottom_text_sender_circle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/circle_bg"
            android:padding="3dp"
            tools:src="@drawable/ic_person" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/single_bottom_text_sender_name"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:fontFamily="serif"
                tools:text="@string/name"
                android:textColor="@color/amberDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/single_bottom_text_get_time_ago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/timestamp"
                android:textColor="@color/amberLight"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/single_bottom_text"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/single_bottom_text_sender_layout"
        android:layout_marginStart="58dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/alegreya_sans_medium"
        tools:text="@string/dummyText"
        android:textColor="@color/amber" />

    <LinearLayout
        android:id="@+id/reply_lyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/single_bottom_text"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/single_bottom_reply"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight=".9"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif-black"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/reply"
            android:textColor="@color/amberDark"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/single_bottom_lovely"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:clickable="true"
            android:contentDescription="@string/lovely"
            android:focusable="true"
            android:foreground="@drawable/round_selector"
            android:gravity="end"
            android:text="@string/zero"
            android:textColor="@color/amberLight"
            app:drawableEndCompat="@drawable/ic_heart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/single_bottom_view_reply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reply_lyt"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:orientation="horizontal">

        <View
            android:layout_width="80dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="@color/amberDark" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/view_replies"
            android:textColor="@color/amberDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalUnderTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/zero"
            android:textColor="@color/amberLight"/>

    </LinearLayout>

</RelativeLayout>