<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020. Huawei Technologies Co., Ltd. All rights reserved.
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dragView"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:elevation="3dp"
    android:layout_gravity="bottom"
    android:background="@drawable/colour_bg_top_corners"
    android:orientation="vertical"
    android:padding="3dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/d_close_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:contentDescription="@string/close"
        android:focusable="true"
        android:foreground="@drawable/round_selector"
        android:src="@drawable/ic_close"
        app:civ_border_color="@color/huawei_red"
        app:civ_circle_background_color="@color/huawei_red" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_web" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:hint="@string/enter_url_address_for_a_video"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:boxStrokeWidth="1dp"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="textUri"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/dialog_send_url"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1"
            android:background="@color/transparent"
            android:clickable="true"
            android:contentDescription="@string/send_url"
            android:focusable="true"
            android:foreground="@drawable/round_ripple"
            android:src="@drawable/ic_send" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/d_video_item_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@color/white"
        android:scrollbars="vertical"
        tools:listitem="@layout/single_video_item" />

</LinearLayout>