<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020. Huawei Technologies Co., Ltd. All rights reserved.
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="6dp"
        app:cardBackgroundColor="@color/cardBackground_night"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/pop_name"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".9"
                    android:fontFamily="@font/bicubik"
                    android:padding="10dp"
                    android:textColor="@color/tintColor_night"
                    android:textStyle="bold"
                    tools:text="@string/hms_video" />

                <ImageButton
                    android:id="@+id/pop_close"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight=".1"
                    android:background="@color/transparent"
                    android:clickable="true"
                    android:contentDescription="@string/close"
                    android:focusable="true"
                    android:foreground="@drawable/round_selector"
                    android:padding="10dp"
                    android:src="@drawable/ic_close"
                    android:tint="@color/colorRed" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@color/white" />

            <LinearLayout
                android:id="@+id/pop_tr"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".3"
                    android:contentDescription="@string/language_turkish"
                    android:src="@drawable/ic_turkish" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".7"
                    android:fontFamily="@font/roboto"
                    android:text="@string/language_turkish"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pop_en"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:contentDescription="@string/language_english"
                    android:src="@drawable/ic_english" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight=".7"
                    android:fontFamily="@font/roboto"
                    android:text="@string/language_english"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/pop_version"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/phenomena_regular"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/fuchsia"
                tools:text="@string/app_version" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>